fixed portfolio hover items on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1045,7 +1045,7 @@ section {
     height: 40vh;
   }
   .portfolios .hover-items {
-    width: 20vh;
+    width: 40vh !important;
     height: 40vh;
     align-items: center;
     align-content: center;
