--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -150,7 +150,7 @@
     }
 
     .hover-items {
-        width: 20vh;
+        width: 40vh !important;
         height: 40vh;
         align-items: center;
         align-content: center;
